layout changes, gap problem not fixed, grid area set

--- a/reseting.css
+++ b/reseting.css
@@ -19,14 +19,14 @@
   a:active {
     outline: none;
   }
-  nav,
+  /* nav,
   footer,
   header,
   aside {
     display: block;
   }
-  html,
-  body {
+  html, */
+  /* body {
     height: 100%;
     width: 100%;
     font-size: 100%;
@@ -35,7 +35,7 @@
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
-  }
+  } */
   input,
   button,
   textarea {
@@ -61,9 +61,9 @@
   ul li {
     list-style: none;
   }
-  img {
+  /* img {
     vertical-align: top;
-  }
+  } */
   h1,
   h2,
   h3,
