--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,82 @@
-.wrapper {
-     min-width: 100vw;
-     min-height: 100vh;
-     font-family: "Jost", sans-serif;
-     color: #000000;
-     display: grid;
-     grid-template-columns: 17% 60% 23%;
-     grid-template-rows: 13% 24% 37% 26%;
-     }
+.container {
+  max-width: 992px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  padding: 10px 30px;
+  font-family: "Jost", sans-serif;
+  color: #000000;
+}
+
+.grid_container {
+  border: 2px solid red;
+  flex: 1 1 auto;
+  display: grid;
+  row-gap: 18px;
+  column-gap: 5px;
+  grid-template-columns: 17% 60% 23%;
+  grid-template-rows: 13% 13% 54% 20%;
+  grid-template-areas:
+    "header header header"
+    ". selection-by-cities ."
+    "selection-zone database vl_cards"
+    "total-info-area total-info-area total-info-area";
+}
 
 .header {
-    border: 1px solid green;
-    grid-column: 1/4;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  background-color: #002d63;
+  border-radius: 12px;
+  /* grid-column: 1/4; */
+  grid-area: header;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer_logo {
+  position: relative;
+  width: 88px;
+  height: 85px;
 }
 
 .footer_logo img {
-    width: 88px;
-    height: 85px;
-    top: 29px;
-    left: 123px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.selection_by_cities {
+  grid-area: selection-by-cities;
+  border-radius: 12px;
+  border: 1px solid green;
+}
+
+.select_zone {
+  grid-area: selection-zone;
+  background: #e8f5fa;
+  border-radius: 12px;
+  border: 1px solid green;
+}
+
+.database {
+  grid-area: database;
+  background-color: #f3f3f3;
+  border-radius: 12px;
+  border: 1px solid green;
+}
+
+.vol_cards {
+  grid-area: vl_cards;
+  border-radius: 12px;
+  background: #f1f1f1;
+  border: 1px solid green;
+}
+
+.total {
+  grid-area: total-info-area;
+  border-radius: 12px;
+  background: #f3f3f3;
+  border: 1px solid green;
 }
